# link-no-atexit

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
