[package]
name = "rust-esp32-std-demo"
version = "0.30.0"
authors = ["ivmarkov"]
edition = "2018"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "A demo binary crate for the ESP32 and ESP-IDF, which connects to WiFi, Ethernet, drives a small HTTP server and draws on a LED screen"
repository = "https://github.com/ivmarkov/rust-esp32-std-demo"
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.dev]
opt-level = "z"

[dependencies]
esp-idf-sys = "0.33.5"

[build-dependencies]
embuild = { version = "0.31.4", features = ["elf"] }
